SFDC Automation/src/objects/Marketing_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>No_of_Impressions_Guaranteed__c</fullName>
        <label>Impressions Guaranteed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Qualified_Contacts__c</fullName>
        <label>Contacts Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Offer being included in any particular blog post on Exchange.Ryder.com Blog.</description>
        <label>Offer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Line_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On-Line Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Link__c</fullName>
        <inlineHelpText>URL link to the coverage on the internet</inlineHelpText>
        <label>Online Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Allows this communication initiative to be related to an opportunity in Ryder&apos;s pipeline. (ie. Press Releases can be related to a Signed Business opportunity.)</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PR_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_25_Copies_for_SCS_Cabinet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order 25 Copies for SCS Cabinet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Copy_Person__c</fullName>
        <description>In case the copy person is not on the current list. Used for cases where use people that we don&apos;t usually work with</description>
        <label>Other Copy Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Design_Person__c</fullName>
        <description>To specify person used for design when they are not in the list. This is to account for designers that we don&apos;t normally work with</description>
        <label>Other Design Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Visits__c</fullName>
        <description>Number of Page Visits for this Blog Post</description>
        <label>Page Visits</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch_Type__c</fullName>
        <inlineHelpText>the type of tangible or intangible collateral being offered as the &apos;hook&apos; for the pitch</inlineHelpText>
        <label>Pitch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Interview (Ryder)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Interview (Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation_Description__c</fullName>
        <label>Presentation Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_Duration__c</fullName>
        <label>Presentation Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <label>Presentation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_date_time__c</fullName>
        <label>Presentation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presenter_Company__c</fullName>
        <label>Presenter Company</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <label>Presenter</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Proof_Approver_1__c</fullName>
        <label>Press Proof Approver 1 / Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Proof_Approver_2__c</fullName>
        <label>Press Proof Approver 2 / Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Mode__c</fullName>
        <inlineHelpText>The media mode where the communication initiative takes place.</inlineHelpText>
        <label>Primary Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Print - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print - Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Fees__c</fullName>
        <label>Print Fees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <inlineHelpText>The &quot;type&quot; of communication initiative.  This is a subcategory of the record types for Editorial, Advertising, Customer Profiles, etc.</inlineHelpText>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Print Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add: Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add: Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add:  Print &amp; Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ads / Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article Reprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 page PPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speak/Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speak/Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speak/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Visit Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement/Insertion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellyband/Special Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive/Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Track__c</fullName>
        <description>To indicate whether the project will be fast-tracked or not</description>
        <label>Project Track</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Marketing_Project__c</referenceTo>
        <relationshipName>Deliverables_for_project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_Approver_1__c</fullName>
        <label>Proof Approver 1 / Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_Approver_2__c</fullName>
        <label>Proof Approver 2 / Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>publication issue or month/year</description>
        <inlineHelpText>The date that the communication appeared in public, or was fully completed and closed.</inlineHelpText>
        <label>Publish / Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Published_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when an ad or value-add placement was audited and determined to have been published correctly.</description>
        <inlineHelpText>If checked, indicates that the &quot;in print&quot; version was audited and determined to have been published correctly.</inlineHelpText>
        <label>Published Successfully</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Customer_Consent_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Customer Consent Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The geographic part of Ryder where the communication initiative takes place.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reprint_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates when CorporateInk recommends a reprint of the coverage be ordered</inlineHelpText>
        <label>Reprint Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Photography_2_copies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Photography (2 copies)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Print_Quotes_If_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Print Quotes (If App)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ryder_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>indicates person at Ryder who will be the lead point person for this initiative</inlineHelpText>
        <label>Ryder Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MARCOM1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ryder_ReprintNo__c</fullName>
        <inlineHelpText>Ryder&apos;s internal unique item # for new piece of marketing collateral</inlineHelpText>
        <label>Ryder Item #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Customer Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_up_w_Supploer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set up w/ Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_End_Date_Time__c</fullName>
        <label>Setup End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Setup_Start_Date_Time__c</fullName>
        <label>Setup Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_Printed_Copies_to_Client_If_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship Printed Copies to Client (If App)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Package__c</fullName>
        <inlineHelpText>details of what&apos;s included in Ryder&apos;s sponsorship package</inlineHelpText>
        <label>Sponsorship Package</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <inlineHelpText>Details about where the communication initiative is at in the process towards being completed.</inlineHelpText>
        <label>Status Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>NOT STARTED -no action taken to date
DEVELOPMENT -decided to pursue, developing content
APPROVALS -content proposed to approvers - ie. legal, client
SUBMITTED/UPCOMING -content approved, awaiting publication</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted/Upcoming</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routing for Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fullfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold / Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Deadline__c</fullName>
        <inlineHelpText>The date that the communication initiative must be submitted in order to meet publish deadline, reservation cut-off, etc.</inlineHelpText>
        <label>Submission Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trackable_URL__c</fullName>
        <description>Unique URL generated from Ryder.com&apos;s web traffic tracking tool, Coremetrics, in order to track/record the number of hits we receive from this unique link embedded in a Ryder web or email advertisement</description>
        <inlineHelpText>Unique URL generated from Ryder.com&apos;s web traffic tracking tool, Coremetrics, in order to track/record the number of hits we receive from this unique link embedded in a Ryder web or email advertisement</inlineHelpText>
        <label>Trackable URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Venue_Phone__c</fullName>
        <inlineHelpText>telephone number for event venue</inlineHelpText>
        <label>Venue Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Venue_Website__c</fullName>
        <inlineHelpText>hotel/venue website where the conference/tradeshow will take place</inlineHelpText>
        <label>Venue Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Venue_address_city_state__c</fullName>
        <inlineHelpText>address of the venue where the conference/tradeshow will take place</inlineHelpText>
        <label>Venue &amp; Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>White_Paper__c</fullName>
        <inlineHelpText>indicates the white paper being used as the &apos;hook&apos; for the pitch/coverage</inlineHelpText>
        <label>White Paper</label>
        <picklist>
            <picklistValues>
                <fullName>Streamlining ERP Implementations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimizing DC Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Carrier-Shipper Relationships</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Writer_Fees__c</fullName>
        <label>Writer Fees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writer__c</fullName>
        <label>Writer</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meredith</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scs_vertical__c</fullName>
        <inlineHelpText>Ryder SCS vertical that the event is aligned to</inlineHelpText>
        <label>SCS Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Auto/Aero/Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Tech/Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics/General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Marketing Deliverable</label>
    <listViews>
        <fullName>AdvertisingCompetitorTracking</fullName>
        <columns>NAME</columns>
        <columns>Media_Outlet__c</columns>
        <columns>Competitor__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Deliverable__c.CompetitorAdvertising</value>
        </filters>
        <label>Advertising - Competitor Tracking</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AwardsRankingsAll</fullName>
        <columns>NAME</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Given_By__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Deliverable__c.AwardRankings</value>
        </filters>
        <label>Awards-Rankings - All</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MARCOMAll</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>MARCOM - All</label>
    </listViews>
    <listViews>
        <fullName>MARCOMOpen</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Deliverable_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Ryder_ReprintNo__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Client Declined</value>
        </filters>
        <label>MARCOM - Open</label>
    </listViews>
    <listViews>
        <fullName>My_Deliverables</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Project__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Deliverables</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Deliverables</pluralLabel>
    <recordTypes>
        <fullName>Advertising</fullName>
        <active>true</active>
        <description>For all advertising, print and value-add</description>
        <label>Advertising</label>
    </recordTypes>
    <recordTypes>
        <fullName>AwardRankings</fullName>
        <active>false</active>
        <description>Awards and rankings issued by publications, customers or other entities</description>
        <label>Award-Rankings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blog</fullName>
        <active>false</active>
        <description>Records one individual blog post.</description>
        <label>Blog</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClientProfile</fullName>
        <active>true</active>
        <description>Collateral pieces includes edge case studies, snapshots, one-page powerpoints, white papers, videos, etc.</description>
        <label>Client Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collateral</fullName>
        <active>true</active>
        <description>Collateral pieces includes edge case studies, snapshots, one-page powerpoints, white papers, videos, etc.</description>
        <label>Collateral</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompetitorAdvertising</fullName>
        <active>false</active>
        <description>captures details related to competitor advertising</description>
        <label>Competitor Advertising</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConferenceTradeShow</fullName>
        <active>true</active>
        <description>Conferences and Trade Shows where Ryder exhibits, sponsors and/or speaks</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerVisit</fullName>
        <active>false</active>
        <description>Customer events and visits that require advance planning by marketing</description>
        <label>Customer Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Mail</fullName>
        <active>true</active>
        <description>For pieces sent through direct mail campaigns</description>
        <label>Direct Mail</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_mail_Touch</fullName>
        <active>false</active>
        <description>E-mail communication for specific Campaign or use with Eloqua.</description>
        <label>E-mail Touch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Editorial</fullName>
        <active>false</active>
        <description>Editorial coverage that Ryder receives (both pitched and non-pitched)</description>
        <label>Editorial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Projects</fullName>
        <active>true</active>
        <description>For projects mostly dealing with internal work</description>
        <label>Internal Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online</fullName>
        <active>true</active>
        <description>For deliverables in the electronic media</description>
        <label>Online</label>
    </recordTypes>
    <recordTypes>
        <fullName>PressRelease</fullName>
        <active>true</active>
        <description>Press releases for announcements regarding customers, new products, vendors, etc.</description>
        <label>Press Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completion_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Completed&quot;),
 ISNULL( Deliverable_Completion_Date__c))</errorConditionFormula>
        <errorDisplayField>Deliverable_Completion_Date__c</errorDisplayField>
        <errorMessage>If the deliverable has been completed, you need to indicate a completion date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completion_Date_but_no_completion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL( Status__c , &quot;Completed&quot;)),
 NOT(ISNULL( Deliverable_Completion_Date__c)))</errorConditionFormula>
        <errorDisplayField>Deliverable_Completion_Date__c</errorDisplayField>
        <errorMessage>If the deliverable has not been completed, you cannot indicate a completion date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Copy_completion_without_start</fullName>
        <active>true</active>
        <description>Copy completion date requires a copy start date</description>
        <errorConditionFormula>and(
not(isnull( Copy_Completion_Date__c )),
isnull( Copy_Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Copy_Start_Date__c</errorDisplayField>
        <errorMessage>If you are entering a copy completion date, you need to have a copy start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Design_Start_without_Copy_completion</fullName>
        <active>true</active>
        <description>Design Start requires a copy completion date</description>
        <errorConditionFormula>and(
not(isnull(  Design_Start_Date__c  )),
isnull( Copy_Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Copy_Completion_Date__c</errorDisplayField>
        <errorMessage>If you are starting design, you need to have a copy completion date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Design_completion_without_start</fullName>
        <active>true</active>
        <description>Design completion date requires a design start date</description>
        <errorConditionFormula>and(
not(isnull( Design_Completion_Date__c )),
isnull( Design_Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Design_Start_Date__c</errorDisplayField>
        <errorMessage>If you are entering a design completion date, you need to have a design start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fulfillment_completion_without_start</fullName>
        <active>true</active>
        <description>Fulfillment completion date requires a fulfillment start date</description>
        <errorConditionFormula>and(
not(isnull( Fulfillment_Completion_Date__c )),
isnull( Fulfillment_Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Fulfillment_Start_Date__c</errorDisplayField>
        <errorMessage>If you are entering a fulfillment completion date, you need to have a fulfillment start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fullfilment_Start_wo_Design_completion</fullName>
        <active>true</active>
        <description>Fulfillment start requires a design completion date</description>
        <errorConditionFormula>and(
not(isnull(  Fulfillment_Start_Date__c  )),
isnull( Design_Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Design_Completion_Date__c</errorDisplayField>
        <errorMessage>If you are starting fulfillment, you need to have a design completion date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_copy_person_control</fullName>
        <active>true</active>
        <description>Make sure that other copy person is not selected in the pick list but no other indicated and vice versa</description>
        <errorConditionFormula>(ISPICKVAL(Copy_Person__c , &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Copy_Person__c))  ||  (NOT(ISPICKVAL(Copy_Person__c , &quot;Other&quot;)) &amp;&amp;  not(ISBLANK(Other_Copy_Person__c )))</errorConditionFormula>
        <errorDisplayField>Other_Copy_Person__c</errorDisplayField>
        <errorMessage>Either Other was indicated as the copy person but no detail was indicated in the corresponding field, or a detail for other was provided but the selection for copy person was not Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_design_person_control</fullName>
        <active>true</active>
        <description>Make sure that other designperson is not selected in the pick list but no other indicated and vice versa</description>
        <errorConditionFormula>(ISPICKVAL(Design_Person__c , &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Design_Person__c))  ||  (NOT(ISPICKVAL(Design_Person__c , &quot;Other&quot;)) &amp;&amp;  not(ISBLANK(Other_Design_Person__c )))</errorConditionFormula>
        <errorDisplayField>Other_Design_Person__c</errorDisplayField>
        <errorMessage>Either Other was indicated as the design person but no detail was indicated in the corresponding field, or a detail for other was provided but the selection for design person was not Other</errorMessage>
    </validationRules>
</CustomObject>